ハンバーガーメニューの作成

--- a/creative.html
+++ b/creative.html
@@ -18,8 +18,10 @@
         <img id="logo-img" src="image\logo.png" 
           alt="トップページに戻る" />
       </a>
-      <!-- PC用ナビ -->
-      <nav id="nav-pc">
+      <!-- ハンバーガーメニューボタン -->
+      <img id="menu-pc-sp" src="image\button.png" alt="メニューを開く" onclick="document.getElementById('nav-pc-sp').style.display = 'block'" >
+      <!-- ナビゲーション -->
+      <nav id="nav-pc-sp">
         <div id="link-box">
           <div id="a-box">
           <a href="mission.html" id="mission">ミッション</a>
