designのヘッダー完成

--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -14,15 +14,23 @@
   <header>
     <nav id="nav-pc">
       <a id="MyProfile" href="designCump.html">MyProfile</a>
-      <a href="designCump.html#About">About</a>
-      <a href="designCump.html#Works">Works</a>
+      <a id="menu" href="designCump.html#About">About</a>
+      <a id="menu" href="designCump.html#Works">Works</a>
       <img id="header-img" src="design-images\main.png" 
         alt="使っているカメラの画像">
     </nav>
   </header>
 
   <main>
+    <article>
+      <section id="About">
 
+      </section>
+      
+      <section id="Works">
+
+      </section>
+    </article>
   </main>
 
   <footer>
