ヘッダーのCSSの調整。完成

--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -13,12 +13,18 @@
 <body>
   <header>
     <nav id="nav-pc">
-      <a id="MyProfile" href="designCump.html">MyProfile</a>
-      <a id="menu" href="designCump.html#About">About</a>
-      <a id="menu" href="designCump.html#Works">Works</a>
-      <img id="header-img" src="design-images\main.png" 
-        alt="使っているカメラの画像">
+      <a id="MyProfile" 
+        href="designCump.html">MyProfile</a>
+        <div id="menu">
+          <a href="designCump.html#About">About</a>
+          <a href="designCump.html#Works">Works</a>
+        </div>
+      
+      
     </nav>
+    <img id="header-img" 
+        src="design-images\main.png" 
+        alt="使っているカメラの画像">
   </header>
 
   <main>
