ヘッダーの最終調整。完成

--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -13,8 +13,11 @@
 <body>
   <header>
     <nav id="nav-pc">
-      <a id="MyProfile" 
-        href="designCump.html">MyProfile</a>
+      <div id="MyProfile">
+        <a href="designCump.html">
+          MyProfile</a>
+      </div>
+      
         <div id="menu">
           <a href="designCump.html#About">About</a>
           <a href="designCump.html#Works">Works</a>
