--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -51,8 +51,38 @@
           </div>
       </div>
       </section>
-      <section id="Works">
-
+      <section>
+        <h2 class="index-h2">Works</h2>
+        <div id="Works">
+          <div id="Works-box">
+            <div id="Works_img">
+              <img src="design-images\works1.png" 
+              alt="青い海">
+            </div>
+              <div id="Works_p">
+                <p>新潟に訪れた際に、日本海の雄大さに魅了されて撮影した1枚</p>
+              </div>
+            
+          </div>
+          <div id="Works-box">
+            <div id="Works_img">
+              <img src="design-images\works2.png" 
+              alt="雄大な山">
+            </div>
+              <div id="Works_p">
+                <p>地元長野の木曽町から撮影した、冠雪した御嶽山</p>
+              </div>
+          </div>
+          <div id="Works-box">
+            <div id="Works_img">
+              <img src="design-images\works3.png" 
+              alt="古風な町">
+            </div>
+              <div id="Works_p">
+                <p>京都で撮影した、明け方の古き良き日本の町並み</p>
+              </div>
+          </div>
+        </div>
       </section>
     </article>
   </main>
