--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -88,7 +88,9 @@
   </main>
 
   <footer>
-
+    <p id="copyright">
+      &copy; MyProfile. All rights reserved.
+    </p>
   </footer>
 </body>
 </html>
