レスポンシブ対応着手開始。 header部分終了

--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -25,6 +25,19 @@
           <a href="designCump.html#Works">Works</a>
         </div>
     </nav>
+    <!-- ナビゲーション -->
+    <nav id="nav-sp">
+      <!-- プロフィール -->
+      <div id="MyProfile">
+        <a href="designCump.html">
+          MyProfile</a>
+      </div>
+      <!-- メニュー -->
+        <div id="menu">
+          <a href="designCump.html#About">About</a>
+          <a href="designCump.html#Works">Works</a>
+        </div>
+    </nav>
     <!-- トップ画像 -->
     <img id="header-img" 
         src="design-images\main.png" 
