レスポンシブ対応完了

--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -64,9 +64,9 @@
           </div>
       </div>
       </section>
-      <section>
+      <section id="Works">
         <h2 class="index-h2">Works</h2>
-        <div id="Works">
+        <div id="Works-main">
           <div id="Works-box">
             <div id="Works_img">
               <img src="design-images\works1.png" 
@@ -75,7 +75,6 @@
               <div id="Works_p">
                 <p>新潟に訪れた際に、日本海の雄大さに魅了されて撮影した1枚</p>
               </div>
-            
           </div>
           <div id="Works-box">
             <div id="Works_img">
