--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -8,7 +8,7 @@
   <meta name="description" 
     content="HTML,CSSの学習後に初めて取り組んだ模写したWEBサイトです">
   <link rel="stylesheet"
-    href="design_style.SCSS.css">
+    href="css/design_style.SCSS.css">
 </head>
 <body>
   <header>
