--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -13,46 +13,39 @@
 <body>
   <header>
     <!-- ナビゲーション -->
-    <nav id="nav-pc">
+    <nav id="nav">
       <!-- プロフィール -->
-      <div id="MyProfile">
-        <a href="designCump.html">
-          MyProfile</a>
+      <div>
+        <a class="font-sizeMax" id="MyProfile"
+          href="designCump.html">MyProfile</a>
       </div>
       <!-- メニュー -->
         <div id="menu">
-          <a href="designCump.html#About">About</a>
-          <a href="designCump.html#Works">Works</a>
+            <a class="font-sizeMax" 
+              href="#About">About</a>
+            <a class="font-sizeMax" 
+              href="#Works">Works</a>
         </div>
     </nav>
-    <!-- ナビゲーション -->
-    <nav id="nav-sp">
-      <!-- プロフィール -->
-      <div id="MyProfile">
-        <a href="designCump.html">
-          MyProfile</a>
-      </div>
-      <!-- メニュー -->
-        <div id="menu">
-          <a href="designCump.html#About">About</a>
-          <a href="designCump.html#Works">Works</a>
-        </div>
-    </nav>
+    
+  </header>
+
+  <main>
     <!-- トップ画像 -->
     <img id="header-img" 
         src="design-images\main.png" 
         alt="使っているカメラの画像">
-  </header>
-
-  <main>
     <article>
       <section id="About">
-        <h2 class="index-h2">About</h2>
+        <h1 class="font-sizeMax">About</h1>
         <div id="About-main">
-            <img src="design-images\about.png" 
-              alt="横を向いている男性の写真">
-          <div id="About_list">
-          <h3>Kazuki Asahina</h3>
+          <!-- 
+            Aboutの画像部分。
+            コンパイルの都合上CSSに記述 -->
+          <div id="About-img"></div>
+          <!-- Aboutの文章部分 -->
+          <div id="About-list">
+          <h2>Kazuki Asahina</h2>
             <ul>
             <li>25歳 長野県佐久市出身</li>
             <li>ソフトウェア業界でマーケティングに従事</li>
@@ -63,7 +56,7 @@
       </div>
       </section>
       <section id="Works">
-        <h2 class="index-h2">Works</h2>
+        <h1 class="font-sizeMax">Works</h1>
         <div id="Works-main">
           <div id="Works-box">
             <div id="Works_img">
