@mixinの修正、クラス定義とCSSの統一の実験

--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -37,8 +37,8 @@
         alt="使っているカメラの画像">
     <article>
       <section id="About">
-        <h1 class="font-sizeMax">About</h1>
-        <div id="About-main">
+        <h1 class="font-sizeMax t-align-center">About</h1>
+        <div id="About-main" >
           <!-- 
             Aboutの画像部分。
             コンパイルの都合上CSSに記述 -->
@@ -47,23 +47,23 @@
           <div id="About-list">
           <h2>Kazuki Asahina</h2>
             <ul>
-            <li>25歳 長野県佐久市出身</li>
-            <li>ソフトウェア業界でマーケティングに従事</li>
-            <li>趣味はカメラ、愛機はCanon</li>
-            <li>自然を撮影するのが好きで、海や山によく行く</li>
+            <li class="font-18px" >25歳 長野県佐久市出身</li>
+            <li class="font-18px">ソフトウェア業界でマーケティングに従事</li>
+            <li class="font-18px">趣味はカメラ、愛機はCanon</li>
+            <li class="font-18px">自然を撮影するのが好きで、海や山によく行く</li>
           </ul>
           </div>
       </div>
       </section>
       <section id="Works">
-        <h1 class="font-sizeMax">Works</h1>
-        <div id="Works-main">
+        <h1 class="font-sizeMax t-align-center" >Works</h1>
+        <div id="Works-main" >
           <div id="Works-box">
             <div id="Works_img">
               <img src="design-images\works1.png" 
               alt="青い海">
             </div>
-              <div id="Works_p">
+              <div id="Works_p" class="t-align-center font-18px">
                 <p>新潟に訪れた際に、日本海の雄大さに魅了されて撮影した1枚</p>
               </div>
           </div>
@@ -72,7 +72,7 @@
               <img src="design-images\works2.png" 
               alt="雄大な山">
             </div>
-              <div id="Works_p">
+              <div id="Works_p" class="t-align-center font-18px">
                 <p>地元長野の木曽町から撮影した、冠雪した御嶽山</p>
               </div>
           </div>
@@ -81,8 +81,8 @@
               <img src="design-images\works3.png" 
               alt="古風な町">
             </div>
-              <div id="Works_p">
-                <p>京都で撮影した、明け方の古き良き日本の町並み</p>
+              <div id="Works_p" class="t-align-center font-18px">
+                <p >京都で撮影した、明け方の古き良き日本の町並み</p>
               </div>
           </div>
         </div>
@@ -92,7 +92,7 @@
   </main>
 
   <footer>
-    <p id="copyright">
+    <p id="copyright" class="t-align-center font-18px">
       &copy; MyProfile. All rights reserved.
     </p>
   </footer>
