SCSSミックスイン専用ファイルの作成と全体の整備

--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -47,10 +47,10 @@
           <div id="About-list">
           <h2>Kazuki Asahina</h2>
             <ul>
-            <li class="font-18px" >25歳 長野県佐久市出身</li>
-            <li class="font-18px">ソフトウェア業界でマーケティングに従事</li>
-            <li class="font-18px">趣味はカメラ、愛機はCanon</li>
-            <li class="font-18px">自然を撮影するのが好きで、海や山によく行く</li>
+            <li class="font-s-18px" >25歳 長野県佐久市出身</li>
+            <li class="font-s-18px">ソフトウェア業界でマーケティングに従事</li>
+            <li class="font-s-18px">趣味はカメラ、愛機はCanon</li>
+            <li class="font-s-18px">自然を撮影するのが好きで、海や山によく行く</li>
           </ul>
           </div>
       </div>
@@ -81,7 +81,7 @@
               <img src="design-images\works3.png" 
               alt="古風な町">
             </div>
-              <div id="Works_p" class="t-align-center font-18px">
+              <div id="Works_p" class="t-align-center font-s-18px">
                 <p >京都で撮影した、明け方の古き良き日本の町並み</p>
               </div>
           </div>
@@ -92,7 +92,7 @@
   </main>
 
   <footer>
-    <p id="copyright" class="t-align-center font-18px">
+    <p id="copyright" class="t-align-center font-s-18px">
       &copy; MyProfile. All rights reserved.
     </p>
   </footer>
