animationとkeyframeの学習と実装

--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -36,7 +36,7 @@
         src="design-images\main.png" 
         alt="使っているカメラの画像">
     <article>
-      <section id="About">
+      <section id="About" class="sliders">
         <h1 class="font-sizeMax t-align-center">About</h1>
         <div id="About-main" >
           <!-- 
@@ -55,7 +55,7 @@
           </div>
       </div>
       </section>
-      <section id="Works">
+      <section id="Works" class="sliders2">
         <h1 class="font-sizeMax t-align-center" >Works</h1>
         <div id="Works-main" >
           <div id="Works-box">
