for文とwhile文の学習

--- a/自作その2（デザインカンプ）/designCump.html
+++ b/自作その2（デザインカンプ）/designCump.html
@@ -32,7 +32,7 @@
 
   <main>
     <!-- トップ画像 -->
-    <img id="header-img" 
+    <img id="header-img" class="zoomIns"
         src="design-images\main.png" 
         alt="使っているカメラの画像">
     <article>
