HTML,CSSの修正、grid,flexboxの活用

--- a/自作その3/copy_coding.html
+++ b/自作その3/copy_coding.html
@@ -8,31 +8,29 @@
   <link rel="stylesheet" href="css\copy_coding.SCSS.css">
 </head>
 <body>
-
-  <div class="grid">
     <!-- header -->
-    <div class="header">
+    <header>
         <!-- My Work -->
-          <a id="My-Work"href="copy_coding.html">My Work</a>
+          <a href="copy_coding.html">My Work</a>
+          <!-- navigation -->
           <nav>
-        <!-- navigation -->
-          <a class="menu" href="#About">About</a>
-          <a class="menu" href="#Works">Works</a>
-          <a class="menu" href="#News">News</a>
-          <a class="menu" href="#Contact">Contact</a>
+            <a class="menu" href="#About">About</a>
+            <a class="menu" href="#Works">Works</a>
+            <a class="menu" href="#News">News</a>
+            <a class="menu" href="#Contact">Contact</a>
           <!-- SNS -->
-              <a class="menu" href="https://www.instagram.com/">
-            <img  id="sns" 
-          src="images\icon-instagram.png" 
-            alt="インスタの画像">
-          </a>
-      </nav>
-    </div>
-    <div class="main">
+            <a class="menu" href="https://www.instagram.com/">
+              <img  id="sns" 
+              src="images\icon-instagram.png" 
+              alt="インスタの画像">
+            </a>
+          </nav>
+    </header>
+    <main>
       <img id="main-img" src="images\mainvisual-pc.jpg" alt="下から撮った木と空の写真">
-    </div>
-    <div class="footer">3</div>
-  </div>
-  
+    </main>
+    <footer>
+      
+    </footer>
 </body>
 </html>
