gridレイアウトで作り直し。 Aboutまで完成

--- a/自作その3/copy_coding.html
+++ b/自作その3/copy_coding.html
@@ -13,14 +13,13 @@
   <body>
     <!-- ヘッダー -->
   <header>
-    <section>
       <a href="" id="MyWork">MyWork</a>
-      <nav>
-        <a href="" class="menu">About</a>
-      <a href="" class="menu">Works</a>
-      <a href="" class="menu">News</a>
-      <a href="" class="menu">Contact</a>
-      <a href="" class="menu">
+      <nav id="head-nav">
+      <a href="#About" class="menu">About</a>
+      <a href="#Works" class="menu">Works</a>
+      <a href="#News" class="menu">News</a>
+      <a href="#Contact" class="menu">Contact</a>
+      <a href="https://www.instagram.com/" class="menu">
         <img id="sns" src="images\icon-instagram.png" alt="インスタの画像"></a>
       </nav>
       
@@ -29,7 +28,26 @@
   </header>
   <!-- メイン -->
   <main>
-
+    <section id="About">
+      <h1>About</h1>
+      <ul id="About-ul">
+        <li id="first-li">Xxxxx Ashley</li>
+        <li>2th Floor xxxxx Building x-x-x Nishiazabu, Minato-ku, Tokyo 106-0031 Japan</li>
+        <li>tel: 000-0000-0000</li>
+        <li>url: www.xxxxxx.jp</li>
+        <li>mail: xxx@xxxxxx.jp</li>
+      </ul>
+      <p>プロフィールテキストテキストテキストテキストテキストテキストテキストテキストテキストスト テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+    </section>
+    <section id="Works">
+      <h1>Works</h1>
+    </section>
+    <section id="News">
+      <h1>News</h1>
+    </section>
+    <section id="Contact">
+      <h1>Contact</h1>
+    </section>
   </main>
   <!-- フッター -->
   <footer>
