--- a/自作その3/copy_coding.html
+++ b/自作その3/copy_coding.html
@@ -41,6 +41,12 @@
     </section>
     <section id="Works">
       <h1>Works</h1>
+      <img id="Works-img1" src="images\works1.jpg" alt="画像1">
+      <img id="Works-img2" src="images\works2.jpg" alt="画像2">
+      <img id="Works-img3" src="images\works3.jpg" alt="画像3">
+      <img id="Works-img4" src="images\works4.jpg" alt="画像4">
+      <img id="Works-img5" src="images\works5.jpg" alt="画像5">
+      <img id="Works-img6" src="images\works6.jpg" alt="画像6">
     </section>
     <section id="News">
       <h1>News</h1>
