--- a/自作その3/copy_coding.html
+++ b/自作その3/copy_coding.html
@@ -48,8 +48,29 @@
       <img id="Works-img5" src="images\works5.jpg" alt="画像5">
       <img id="Works-img6" src="images\works6.jpg" alt="画像6">
     </section>
+    <!-- News -->
     <section id="News">
       <h1>News</h1>
+      <dl>
+        <dr class="News-dr" id="News-first-dr">2020.XX.XX</dr>
+        <dt class="News-dt" id="News-first-dt">デザイン雑誌
+        テスト  Vol.11』に掲載していただきました。</dt>
+        <dr class="News-dr" id="News-dr2">2020.XX.XX</dr>
+        <dt class="News-dt" id="News-dt2">ＸＸ月ＸＸ日から写真集
+          「テスト」の販売を開始します。</dt>
+        <dr class="News-dr" id="News-dr3">2019.XX.XX</dr>
+        <dt class="News-dt" id="News-dt3">【イベント開催のお知らせ】
+          テキストテキストテキストテキスト
+          テキストテキストテキスト</dt>
+        <dr class="News-dr" id="News-dr4">2019.XX.XX</dr>
+        <dt class="News-dt" id="News-dt4">デザイン雑誌
+          「テスト Vol.10』に掲載して
+          いただきました。</dt>
+        <dr class="News-dr" id="News-dr5">2019.XX.XX</dr>
+        <dt class="News-dt" id="News-dt5">個展開催のお知らせ】
+          テキストテキストテキストテキスト
+          テキストテキストテキスト</dt>
+      </dl>
     </section>
     <section id="Contact">
       <h1>Contact</h1>
