レスポンシブ化完了。完成！！

--- a/自作その3/copy_coding.html
+++ b/自作その3/copy_coding.html
@@ -41,12 +41,12 @@
     </section>
     <section id="Works">
       <h1>Works</h1>
-      <img id="Works-img1" src="images\works1.jpg" alt="画像1">
-      <img id="Works-img2" src="images\works2.jpg" alt="画像2">
-      <img id="Works-img3" src="images\works3.jpg" alt="画像3">
-      <img id="Works-img4" src="images\works4.jpg" alt="画像4">
-      <img id="Works-img5" src="images\works5.jpg" alt="画像5">
-      <img id="Works-img6" src="images\works6.jpg" alt="画像6">
+      <img class="Works-img" id="Works-img1" src="images\works1.jpg" alt="画像1">
+      <img class="Works-img" id="Works-img2" src="images\works2.jpg" alt="画像2">
+      <img class="Works-img" id="Works-img3" src="images\works3.jpg" alt="画像3">
+      <img class="Works-img" id="Works-img4" src="images\works4.jpg" alt="画像4">
+      <img class="Works-img" id="Works-img5" src="images\works5.jpg" alt="画像5">
+      <img class="Works-img" id="Works-img6" src="images\works6.jpg" alt="画像6">
     </section>
     <!-- News -->
     <section id="News">
@@ -67,7 +67,7 @@
           「テスト Vol.10』に掲載して
           いただきました。</dt>
         <dr class="News-dr" id="News-dr5">2019.XX.XX</dr>
-        <dt class="News-dt" id="News-dt5">個展開催のお知らせ】
+        <dt class="News-dt" id="News-dt5">【個展開催のお知らせ】
           テキストテキストテキストテキスト
           テキストテキストテキスト</dt>
       </dl>
