margin,text-align,gap,flex及びgridでのプロパティの復習

--- a/自作その3/copy_coding.html
+++ b/自作その3/copy_coding.html
@@ -31,7 +31,7 @@
     <section id="About">
       <h1>About</h1>
       <ul id="About-ul">
-        <li id="first-li">Xxxxx Ashley</li>
+        <li>Xxxxx Ashley</li>
         <li>2th Floor xxxxx Building x-x-x Nishiazabu, Minato-ku, Tokyo 106-0031 Japan</li>
         <li>tel: 000-0000-0000</li>
         <li>url: www.xxxxxx.jp</li>
@@ -105,9 +105,7 @@
       <textarea name="contact-text" 
       id="message-box" 
       placeholder="お問い合わせ内容を記入してください"></textarea>
-      <div id="submit">
       <button type="submit">送信</button>
-      </div>
     </form>
   </div>
     </section>
