JSの学習（forEachとaddEventListenerについて）

--- a/自作その3/copy_coding.html
+++ b/自作その3/copy_coding.html
@@ -9,6 +9,7 @@
       content="東京都住まいのフォトグラファーのポートフォリオサイトです"
     />
     <link rel="stylesheet" href="css\copy_coding.SCSS.css" />
+    <script src="js\copy_coding.js" defer></script>
   </head>
   <body>
     <!-- ヘッダー -->
