（計132分の活動）タイマー機能の追加とsetTimeoutとsetIntervalの違いの学習、一時停止ボタンとタイマーが連動するように機能追加、一時停止時にゲームを再開しますの文言の追加

--- a/自作その3/copy_coding.html
+++ b/自作その3/copy_coding.html
@@ -76,7 +76,7 @@
     <section id="Contact">
       <div>
       <h1>Contact</h1>
-      <form id="contact-form">
+      <form id="contact-form" name="textForm">
         <!-- 名前 -->
         <label for="name" 
         id="contact-label-1" class="contact-label">
@@ -115,5 +115,7 @@
   <footer>
 
   </footer>
+    <a href="#" id="BackToHome">TOPへ戻る</a>
+    
   </body>
 </html>
