HTMLの構造完成

--- a/自作その４/index.html
+++ b/自作その４/index.html
@@ -9,7 +9,7 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- ヘッダー -->
+  <!-- ヘッダー（外周の余白の為に使用） -->
   <header>
     <!-- タイトル -->
     <a href="index.html">Travel Blog</a>
@@ -22,33 +22,121 @@
       <a href="#">CONTACT</a>
     </nav>
   </header>
-  <!-- メイン -->
+  <!-- メイン（外周の余白の為に使用） -->
   <main>
-    <section>
-      <div>
-        <img src="" alt="">
-        <h2></h2>
-        <a href=""></a>
+    <!-- ヘッダー真下のセクション -->
+    <section id="section-top">
+
+      <!-- left -->
+      <div class="top-div">
+        <img src="image\pickup1.jpg" alt="">
+        <h2>タイトルテキストテキストテキストテキストテキストテキストテキスト</h2>
+        <a href="#" class="read-more">READ MORE</a>
       </div>
-      <div>
-        <img src="" alt="">
-        <h2></h2>
-        <a href=""></a>
+      <!-- center -->
+      <div class="top-div">
+        <img src="image\pickup2.jpg" alt="">
+        <h2>タイトルテキストテキストテキストテキストテキストテキストテキスト</h2>
+        <a href="#" class="read-more">READ MORE</a>
       </div>
-      <div>
-        <img src="" alt="">
-        <h2></h2>
-        <a href=""></a>
+      <!-- right -->
+      <div class="top-div">
+        <img src="image\pickup3.jpg" alt="">
+        <h2>タイトルテキストテキストテキストテキストテキストテキストテキスト</h2>
+        <a href="#" class="read-more">READ MORE</a>
       </div>
     </section>
-  </main>
-  <!-- 右側のセクション -->
+    <!-- 左側1つ目のセクション -->
+    <section id="section1">
+      <h1>タイトルテキストテキストテキストテキストテキスト</h1>
+      <p>2020/01/01  カテゴリ1</p>
+      <img src="image\main1.jpg" alt="">
+      <p>本文</p>
+      <a href="#" class="read-more">READ MORE</a>
+    </section>
+    <!--  -->
+    <section id="section2">
+      <h1>タイトルテキストテキストテキストテキストテキスト</h1>
+      <p>2020/01/01  カテゴリ1</p>
+      <img src="image\main2.jpg" alt="">
+      <p>本文</p>
+      <a href="#" class="read-more">READ MORE</a>
+    </section>
+    <!-- 左側３つ目のセクション -->
+    <section id="section3">
+      <h1>タイトルテキストテキストテキストテキストテキスト</h1>
+      <p>2020/01/01  カテゴリ1</p>
+      <img src="image\main3.jpg" alt="">
+      <p>本文</p>
+      <a href="#" class="read-more">READ MORE</a>
+    </section>
+      <!-- 右側のセクション -->
   <aside>
-
+    <!-- Name -->
+    <section id="aside-section1">
+      <img src="image\author.jpg" alt="">
+      <h2>Name Name</h2>
+      <p>プロフィールテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+      </p>
+    </section>
+    <!-- Ranking -->
+    <section id="aside-section2">
+      <!-- 1枚目 -->
+      <h2>Ranking</h2>
+      <img src="image\ranking1.jpg" alt="">
+      <p>タイトルテキストテキストテキストテキストテキストテキスト</p>
+      <!-- 2枚目 -->
+      <img src="image\ranking2.jpg" alt="">
+      <p>タイトルテキストテキストテキストテキストテキストテキスト</p>
+      <!-- 3枚目 -->
+      <img src="image\ranking3.jpg" alt="">
+      <p>タイトルテキストテキストテキストテキストテキストテキスト</p>
+    </section>
+    <!-- Archive -->
+    <section id="aside-section3">
+      <h2>Archive</h2>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+      <p>XXXX年XX月(XX)</p>
+    </section>
   </aside>
-  <!-- フッター -->
+  </main>
+  <!-- フッター（外周の余白の為に使用） -->
   <footer>
-
+    <section id="foot-section1">
+      <h2>About</h2>
+      <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+      <a href="#">プロフィール詳細</a>
+      <a href="#">お仕事の依頼</a>
+      <a href="#">お問い合わせ</a>
+    </section>
+    <section id="foot-section2">
+      <h2>Menu</h2>
+      <!-- ブロック要素として扱い為クラスを使用 -->
+      <a href="#" class="a-block">NEW</a>
+      <a href="#" class="a-block">CATEGORY</a>
+      <a href="#" class="a-block">COLUMN</a>
+      <a href="#" class="a-block">SERIES</a>
+      <a href="#" class="a-block">Q&A</a>
+    </section>
+    <section id="foot-section3">
+      <h2>Twitter</h2>
+        <a href="#" class="a-block">あ</a>
+    </section>
   </footer>
+  <!-- copyright -->
+  <p>
+    &copy;Travel & Blog
+  </p>
 </body>
 </html>
