全体の余白調整完了。細部のCSS記述開始

--- a/自作その４/index.html
+++ b/自作その４/index.html
@@ -71,10 +71,14 @@
       <a href="#" class="read-more">READ MORE</a>
     </section>
       <!-- 右側のセクション -->
+      <!-- asideはgridで区切るために使用 -->
   <aside>
     <!-- Name -->
     <section id="aside-section1">
-      <img src="image\author.jpg" alt="">
+      <div>
+        <img src="image\author.jpg" alt="">
+      </div>
+      
       <h2>Name Name</h2>
       <p>プロフィールテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキスト
       </p>
