header ,main,asideの余白調整完了

--- a/自作その４/index.html
+++ b/自作その４/index.html
@@ -21,10 +21,7 @@
       <a href="#">Q&A</a>
       <a href="#">CONTACT</a>
     </nav>
-  </header>
-  <!-- メイン（外周の余白の為に使用） -->
-  <main>
-    <!-- ヘッダー真下のセクション -->
+      <!-- ヘッダー内のセクション -->
     <section id="section-top">
 
       <!-- left -->
@@ -46,6 +43,10 @@
         <a href="#" class="read-more">READ MORE</a>
       </div>
     </section>
+  </header>
+  <!-- メイン（外周の余白の為に使用） -->
+  <main>
+    
     <!-- 左側1つ目のセクション -->
     <section id="section1">
       <h1>タイトルテキストテキストテキストテキストテキスト</h1>
@@ -70,6 +71,8 @@
       <p>本文</p>
       <a href="#" class="read-more">READ MORE</a>
     </section>
+
+  </main>      
       <!-- 右側のセクション -->
       <!-- asideはgridで区切るために使用 -->
   <aside>
@@ -99,22 +102,21 @@
     <!-- Archive -->
     <section id="aside-section3">
       <h2>Archive</h2>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
-      <p>XXXX年XX月(XX)</p>
+      <p id="first-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
+      <p class="others-border">XXXX年XX月(XX)</p>
     </section>
   </aside>
-  </main>
   <!-- フッター（外周の余白の為に使用） -->
   <footer>
     <section id="foot-section1">
