自作４の大枠の完成。 自作３の画像CSS、パス、ボーダーの微調整

--- a/自作その４/index.html
+++ b/自作その４/index.html
@@ -52,7 +52,7 @@
       <h1>タイトルテキストテキストテキストテキストテキスト</h1>
       <p>2020/01/01  カテゴリ1</p>
       <img src="image\main1.jpg" alt="">
-      <p>本文</p>
+      <p class="main-text">本文テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
       <a href="#" class="read-more">READ MORE</a>
     </section>
     <!--  -->
@@ -60,7 +60,7 @@
       <h1>タイトルテキストテキストテキストテキストテキスト</h1>
       <p>2020/01/01  カテゴリ1</p>
       <img src="image\main2.jpg" alt="">
-      <p>本文</p>
+      <p class="main-text">本文テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
       <a href="#" class="read-more">READ MORE</a>
     </section>
     <!-- 左側３つ目のセクション -->
@@ -68,7 +68,7 @@
       <h1>タイトルテキストテキストテキストテキストテキスト</h1>
       <p>2020/01/01  カテゴリ1</p>
       <img src="image\main3.jpg" alt="">
-      <p>本文</p>
+      <p class="main-text">本文テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
       <a href="#" class="read-more">READ MORE</a>
     </section>
 
@@ -122,9 +122,9 @@
     <section id="foot-section1">
       <h2>About</h2>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-      <a href="#">プロフィール詳細</a>
-      <a href="#">お仕事の依頼</a>
-      <a href="#">お問い合わせ</a>
+      <a href="#" class="a-block">プロフィール詳細</a>
+      <a href="#" class="a-block">お仕事の依頼</a>
+      <a href="#" class="a-block">お問い合わせ</a>
     </section>
     <section id="foot-section2">
       <h2>Menu</h2>
@@ -139,10 +139,11 @@
       <h2>Twitter</h2>
         <a href="#" class="a-block">あ</a>
     </section>
+
+  </footer>
     <!-- copyright -->
-  <p>
+  <p id="copy-right">
     &copy;Travel & Blog
   </p>
-  </footer>
 </body>
 </html>
