自作４：全体の余白の調整

--- a/自作その４/index.html
+++ b/自作その４/index.html
@@ -15,7 +15,8 @@
     <a href="index.html">Travel Blog</a>
     <!-- ナビゲーション -->
     <nav>
-      <a href="#">NEW</a>
+      <a href="#">NEW</span></a>
+      <!-- <span class="sub-text1">新しい記事 -->
       <a href="#">COLUMN</a>
       <a href="#">SERIES</a>
       <a href="#">Q&A</a>
@@ -102,19 +103,19 @@
     <!-- Archive -->
     <section id="aside-section3">
       <h2>Archive</h2>
-      <p id="first-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
-      <p class="others-border">XXXX年XX月(XX)</p>
+      <p id="first-border" class="a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
+      <p class="others-border a-block">XXXX年XX月(XX)</p>
     </section>
   </aside>
   <!-- フッター（外周の余白の為に使用） -->
@@ -129,11 +130,11 @@
     <section id="foot-section2">
       <h2>Menu</h2>
       <!-- ブロック要素として扱い為クラスを使用 -->
-      <a href="#" class="a-block">NEW</a>
-      <a href="#" class="a-block">CATEGORY</a>
-      <a href="#" class="a-block">COLUMN</a>
-      <a href="#" class="a-block">SERIES</a>
-      <a href="#" class="a-block">Q&A</a>
+      <a href="#"  id="first-border" class="a-block">NEW</a>
+      <a href="#" class="others-border a-block">CATEGORY</a>
+      <a href="#" class="others-border a-block">COLUMN</a>
+      <a href="#" class="others-border a-block">SERIES</a>
+      <a href="#" class="others-border a-block">Q&A</a>
     </section>
     <section id="foot-section3">
       <h2>Twitter</h2>
