--- a/自作その４/index.html
+++ b/自作その４/index.html
@@ -22,29 +22,29 @@
       <a href="#">Q&A</a>
       <a href="#">CONTACT</a>
     </nav>
-      <!-- ヘッダー内のセクション -->
-    <section id="section-top">
-
-      <!-- left -->
-      <div class="top-div">
-        <img src="image\pickup1.jpg" alt="">
-        <h2>タイトルテキストテキストテキストテキストテキストテキストテキスト</h2>
-        <a href="#" class="read-more">READ MORE</a>
-      </div>
-      <!-- center -->
-      <div class="top-div">
-        <img src="image\pickup2.jpg" alt="">
-        <h2>タイトルテキストテキストテキストテキストテキストテキストテキスト</h2>
-        <a href="#" class="read-more">READ MORE</a>
-      </div>
-      <!-- right -->
-      <div class="top-div">
-        <img src="image\pickup3.jpg" alt="">
-        <h2>タイトルテキストテキストテキストテキストテキストテキストテキスト</h2>
-        <a href="#" class="read-more">READ MORE</a>
-      </div>
-    </section>
   </header>
+      <!-- ヘッダー内のセクション -->
+      <section id="section-top">
+
+        <!-- left -->
+        <div class="top-div">
+          <img src="image\pickup1.jpg" alt="">
+          <h2>タイトルテキストテキストテキストテキストテキストテキストテキスト</h2>
+          <a href="#" class="read-more">READ MORE</a>
+        </div>
+        <!-- center -->
+        <div class="top-div">
+          <img src="image\pickup2.jpg" alt="">
+          <h2>タイトルテキストテキストテキストテキストテキストテキストテキスト</h2>
+          <a href="#" class="read-more">READ MORE</a>
+        </div>
+        <!-- right -->
+        <div class="top-div">
+          <img src="image\pickup3.jpg" alt="">
+          <h2>タイトルテキストテキストテキストテキストテキストテキストテキスト</h2>
+          <a href="#" class="read-more">READ MORE</a>
+        </div>
+      </section>
   <!-- メイン（外周の余白の為に使用） -->
   <main>
     
@@ -138,7 +138,7 @@
     </section>
     <section id="foot-section3">
       <h2>Twitter</h2>
-        <a href="#" class="a-block">あ</a>
+        <a class="twitter-timeline a-block" href="https://twitter.com/X?ref_src=twsrc%5Etfw">Tweets by X</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8" defer></script>
     </section>
 
   </footer>
