PC版の微調整、完成

--- a/自作その４/index.html
+++ b/自作その４/index.html
@@ -138,7 +138,7 @@
     </section>
     <section id="foot-section3">
       <h2>Twitter</h2>
-        <a class="twitter-timeline a-block" href="https://twitter.com/X?ref_src=twsrc%5Etfw">Tweets by X</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8" defer></script>
+      <a class="twitter-timeline" data-lang="ja" data-width="350" data-height="300" data-dnt="true" data-theme="light" href="https://twitter.com/X?ref_src=twsrc%5Etfw">Tweets by X</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </section>
 
   </footer>
