--- a/自作その４/index.html
+++ b/自作その４/index.html
@@ -12,7 +12,7 @@
   <!-- ヘッダー（外周の余白の為に使用） -->
   <header>
     <!-- タイトル -->
-    <a href="index.html">Travel Blog</a>
+    <a href="index.html" class="a-block">Travel Blog</a>
     <!-- ナビゲーション -->
     <nav>
       <a href="#">NEW</span></a>
