--- a/自作その６/index.html
+++ b/自作その６/index.html
@@ -9,11 +9,17 @@
   <script src="js/script.js" defer></script>
 </head>
 <body>
+  <!-- ヘッダー -->
   <header>
     <!-- ロゴ -->
     <a href="index.html"><img src="image/logo.svg" alt=""></a>
     <!-- メニューバー -->
-    <div id="menu-bar"></div>
+    <div id="menu-bar">
+      <!-- 上側のバー -->
+      <div></div>
+      <!-- 下側のバー -->
+      <div></div>
+    </div>
     <!-- ナビゲーション/クリックしたら表示 -->
     <nav>
       <a href="product.html">PRODUCT</a>
@@ -22,6 +28,7 @@
       <a href="#">CONTACT</a>
     </nav>
   </header>
+  <!-- メイン -->
   <main>
     <!-- PRODUCT -->
     <ul>
@@ -84,6 +91,7 @@
     </ul>
     <a href="product.html">View More</a>
   </main>
+  <!-- フッター -->
   <footer>
     <nav>
     <a href="">INSTAGRAM</a>
