ハンバーガーメニューの完成（微調整まだ）

--- a/自作その６/index.html
+++ b/自作その６/index.html
@@ -17,9 +17,9 @@
     <!-- メニューバー -->
     <div class="menu-bar">
       <!-- 上側のバー -->
-      <div class="top-bar"></div>
+      <div></div>
       <!-- 下側のバー -->
-      <div class="bottom-bar"></div>
+      <div></div>
     </div>
     
     
