トップページの大枠完成

--- a/自作その６/index.html
+++ b/自作その６/index.html
@@ -37,7 +37,6 @@
     <!-- ナビゲーション背景 -->
     <div class="nav-back">
     </div>
-    
   </header>
   <!-- メイン -->
   <main>
@@ -100,7 +99,7 @@
         </a>
       </li>
     </ul>
-    <a href="product.html">View More</a>
+    <a href="product.html" class="view-more">View More</a>
   </main>
   <!-- フッター -->
   <footer>
