--- a/自作その６/index.html
+++ b/自作その６/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="シンプルなインテリアの商品ページです">
   <title>Furniture Design</title>
+  <link rel="icon" href="/自作その６/image/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.SCSS.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
   <script src="js/script.js" defer></script>
