--- a/自作その６/products.html
+++ b/自作その６/products.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="シンプルなインテリアの商品ページです">
-  <title>Furniture Design</title>
+  <title>Products | Furniture Design</title>
   <link rel="icon" href="/自作その６/image/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.SCSS.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
@@ -39,9 +39,15 @@
     <div class="nav-back">
     </div>
   </header>
+  
+
+  
   <!-- メイン -->
   <main>
     <!-- PRODUCT -->
+    
+    <!-- products見出し -->
+    <h3>Products</h3>
     <ul>
       <li>
         <a href="items/item1.html">
@@ -99,8 +105,42 @@
           <p>\9,000 +tax</p>
         </a>
       </li>
+      <li>
+        <a href="items/item9.html">
+          <img src="image/item9.jpg" alt="">
+          <p>プロダクト9</p>
+          <p>\10,000 +tax</p>
+        </a>
+      </li>
+      <li>
+        <a href="items/item10.html">
+          <img src="image/item10.jpg" alt="">
+          <p>プロダクト10</p>
+          <p>11,000 +tax</p>
+        </a>
+      </li>
+      <li>
+        <a href="items/item11.html">
+          <img src="image/item11.jpg" alt="">
+          <p>プロダクト11</p>
+          <p>\12,000 +tax</p>
+        </a>
+      </li>
+      <li>
+        <a href="items/item12.html">
+          <img src="image/item12.jpg" alt="">
+          <p>プロダクト12</p>
+          <p>\13,000 +tax</p>
+        </a>
+      </li>
     </ul>
-    <a href="products.html" class="view-more">View More</a>
+    <!-- ページ移動 -->
+    <ul class="page-view-1">
+        <li>1</li>
+        <li>
+          <a href="products2.html">2</a>
+        </li>
+      </ul>
   </main>
   <!-- フッター -->
   <footer>
