--- a/自作その６/products2.html
+++ b/自作その６/products2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="シンプルなインテリアの商品ページです">
-  <title>Furniture Design</title>
+  <title>Products | Furniture Design</title>
   <link rel="icon" href="/自作その６/image/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.SCSS.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
@@ -39,68 +39,54 @@
     <div class="nav-back">
     </div>
   </header>
+  
+
+  
   <!-- メイン -->
   <main>
     <!-- PRODUCT -->
+    
+    <!-- products見出し -->
+    <h3>Products</h3>
     <ul>
       <li>
-        <a href="items/item1.html">
-          <img src="image/item1.jpg" alt="">
-          <p>プロダクト1</p>
-          <p>\2,000 +tax</p>
+        <a href="items/item13.html">
+          <img src="image/item13.jpg" alt="">
+          <p>プロダクト13</p>
+          <p>\14,000 +tax</p>
         </a>
       </li>
       <li>
-        <a href="items/item2.html">
-          <img src="image/item2.jpg" alt="">
-          <p class="pColor">プロダクト2</p>
-          <p>\3,000 +tax</p>
+        <a href="items/item14.html">
+          <img src="image/item14.jpg" alt="">
+          <p>プロダクト14</p>
+          <p>15,000 +tax</p>
         </a>
       </li>
       <li>
-        <a href="items/item3.html">
-          <img src="image/item3.jpg" alt="">
-          <p>プロダクト3</p>
-          <p>\4,000 +tax</p>
+        <a href="items/item15.html">
+          <img src="image/item15.jpg" alt="">
+          <p>プロダクト15</p>
+          <p>\16,000 +tax</p>
         </a>
       </li>
       <li>
-        <a href="items/item4.html">
-          <img src="image/item4.jpg" alt="">
-          <p>プロダクト4</p>
-          <p>\5,000 +tax</p>
-        </a>
-      </li>
-      <li>
-        <a href="items/item5.html">
-          <img src="image/item5.jpg" alt="">
-          <p>プロダクト5</p>
-          <p>\6,000 +tax</p>
-        </a>
-      </li>
-      <li>
-        <a href="items/item6.html">
-          <img src="image/item6.jpg" alt="">
-          <p>プロダクト6</p>
-          <p>\7,000 +tax</p>
-        </a>
-      </li>
-      <li>
-        <a href="items/item7.html">
-          <img src="image/item7.jpg" alt="">
-          <p>プロダクト7</p>
-          <p>\8,000 +tax</p>
-        </a>
-      </li>
-      <li>
-        <a href="items/item8.html">
-          <img src="image/item8.jpg" alt="">
-          <p>プロダクト8</p>
-          <p>\9,000 +tax</p>
+        <a href="items/item16.html">
+          <img src="image/item16.jpg" alt="">
+          <p>プロダクト16</p>
+          <p>\17,000 +tax</p>
         </a>
       </li>
     </ul>
-    <a href="products.html" class="view-more">View More</a>
+    <!-- ページ移動 -->
+    <ul class="page-view-1">
+        <li>
+          <a href="products.html">1</a>
+        </li>
+        <li>
+          2
+        </li>
+      </ul>
   </main>
   <!-- フッター -->
   <footer>
